--- a/app/views/sources/_source.html.erb
+++ b/app/views/sources/_source.html.erb
@@ -1,9 +1,9 @@
 <tr id="<%= dom_id(source) %>" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
   <td class="text-gray-900 whitespace-nowrap dark:text-white">
-    <div class="text-base"><%= source.name %></div>
+    <a href="<%= source.link %>" target="_blank" class="text-base cursor-pointer"><%= source.name %></a>
   </td>
   <td class="px-4 py-4 text-left">
-    <%= source.link %>
+    <a href="<%= source.link %>" target="_blank" class="text-base cursor-pointer"><%= source.link %></a>
   </td>
   <td class="px-4 py-4 text-center space-x-2">
     <%= link_to 'Show', source_path(source), class: "inline-block" %>
