--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,7 +19,7 @@
     <% end %>
 
     <p class="font-bold mt-4">Justification</p>
-    <p><%= raw(@markdown.render(@article.justification)) if @article.justification %></p>
+    <p><%= raw(@markdown.render(@article.justification)) if @article.justification.present? %></p>
 
     <p class="font-bold mt-4">Metadata</p>
     <p class="px-6" <%= render_json(@article.metadata) if @article.metadata %></p>
