--- a/app/views/hacks/index.html.erb
+++ b/app/views/hacks/index.html.erb
@@ -17,8 +17,8 @@
         <div class="grid grid-cols-6 gap-4">
           <div class="flex flex-col gap-2">
             <div>
-              <%= f.select :is_advise_eq,
-                           options_for_select([["Only Hacks", false], ["Only Advices", true]], params.dig(:q, :is_advise_eq)),
+              <%= f.select :is_advice_eq,
+                           options_for_select([["Only Hacks", false], ["Only Advices", true]], params.dig(:q, :is_advice_eq)),
                            { include_blank: "All Type" },
                            class: "bg-gray-50 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
             </div>
