--- a/app/views/hacks/index.html.erb
+++ b/app/views/hacks/index.html.erb
@@ -195,7 +195,7 @@
           </td>
           <td class="px-0 py-2 text-center ">
             <div class="inline-flex">
-              <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.is_advise? ? "Advice" : "Hack" %></span>
+              <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.is_advice? ? "Advice" : "Hack" %></span>
             </div>
           </td>
 
