--- a/app/views/hacks/_basic.html.erb
+++ b/app/views/hacks/_basic.html.erb
@@ -1,10 +1,10 @@
 <div class="p-6 pt-4 w-3/4">
-  <p class="font-bold">Type: <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.is_advise? ? "Advice" : "Hack" %></span>
+  <p class="font-bold">Type: <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.is_advice? ? "Advice" : "Hack" %></span>
   </p>
 
-  <% if hack.is_advise? %>
-    <p class="font-bold mt-4">Advise Justification</p>
-    <p><%= hack.advise_justification %></p>
+  <% if hack.is_advice? %>
+    <p class="font-bold mt-4">Advice Justification</p>
+    <p><%= hack.advice_justification %></p>
   <% end %>
 
   <p class="font-bold mt-4">Init Title</p>
