--- a/app/views/hacks/index.html.erb
+++ b/app/views/hacks/index.html.erb
@@ -314,23 +314,36 @@
     </table>
     </div>
 
-    <nav class="flex p-2 pl-6 px-4 items-end flex-column flex-wrap md:flex-row justify-between" aria-label="Table navigation">
-    <span class="text-sm font-normal text-gray-500 dark:text-gray-400 mb-4 md:mb-0 block w-full md:inline md:w-auto">
-      Showing <span class="font-semibold text-gray-900 dark:text-white"><%= @pagy.from %>-<%= @pagy.to %></span> of <span class="font-semibold text-gray-900 dark:text-white"><%= @pagy.count %></span>
-    </span>
-      <ul class="pt-2 inline-flex -space-x-px rtl:space-x-reverse text-sm h-8 list-none">
+    <nav class="flex gap-4 p-2 pl-6 px-4 items-center justify-end flex-column flex-wrap md:flex-row justify-between" aria-label="Table navigation">
+            <span class="text-sm font-normal text-gray-500 dark:text-gray-400 mb-4 md:mb-0 block w-full md:inline md:w-auto">
+              <%= t("helpers.page.showing") %> <span class="font-semibold text-gray-900 dark:text-white"><%= "#{@pagy.from}-#{@pagy.to}" %></span> <%= t("helpers.page.of") %> <span class="font-semibold text-gray-900 dark:text-white"><%= @pagy.count %></span></span>
+      <ul class="inline-flex -space-x-px rtl:space-x-reverse text-sm h-8 list-none">
         <li>
-          <%= link_to 'Previous', hacks_path(page: @pagy.prev), { disabled: @pagy.prev.blank?, class: "flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white" } %>
+          <%= link_to t("helpers.page.previous"), hacks_path(params.to_unsafe_h.merge(page: @pagy.prev)),
+                      {
+                        disabled: @pagy.prev.blank?,
+                        class: "flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+                      } %>
         </li>
-        <% @pagy.pages.times do |page| %>
+        <% @pagy.series.each do |page| %>
           <li>
-            <%= link_to "#{page + 1}", hacks_path(page: page + 1), { class: "flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"} %>
+            <% if page.is_a?(Integer) %>
+              <%= link_to page.to_s, hacks_path(params.to_unsafe_h.merge(page: page)),
+                          class: "flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white" %>
+            <% else %>
+              <span class="flex items-center justify-center px-3 h-8 text-gray-500">...</span>
+            <% end %>
           </li>
         <% end %>
         <li>
-          <%= link_to 'Next', hacks_path(page: @pagy.next), { disabled: @pagy.next.blank?, class: "flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white" } %>
+          <%= link_to t("helpers.page.next"), hacks_path(params.to_unsafe_h.merge(page: @pagy.next)),
+                      {
+                        disabled: @pagy.next.blank?,
+                        class: "flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+                      } %>
         </li>
       </ul>
+
     </nav>
   </div>
     
