--- a/app/views/hacks/_dropdown_filter.erb
+++ b/app/views/hacks/_dropdown_filter.erb
@@ -22,7 +22,7 @@
         <li class="flex items-center">
           <input
             type="checkbox"
-            id="<%= "#{field_prefix}_#{item.id}" %>"
+            id="<%= "category-#{item.id}" %>"
             name="<%= filter_name %>"
             value="<%= item.id %>"
             class="h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500 cursor-pointer"
